--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-config": "^1.5.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
@@ -32,5 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://192.168.0.6:8080"
+
 }
