--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/native": "^7.0.3",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
@@ -37,5 +39,4 @@
   },
   "private": true,
   "proxy": "http://192.168.0.6:8080"
-
 }
