--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@ant-design/react-native": "^5.3.2",
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
@@ -30,7 +32,8 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "babel-plugin-import": "^1.13.8"
   },
   "private": true
 }
