--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.3",
+    "antd-mobile-icons": "^0.3.0",
     "expo": "^52.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-calendars": "^1.1307.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
