--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.3",
+    "antd-mobile": "^5.38.1",
+    "antd-mobile-icons": "^0.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "antd-mobile-icons": "^0.3.0",
     "expo": "^52.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-config": "^1.5.3",
     "react-native-calendars": "^1.1307.0",
+    "react-native-config": "^1.5.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
