--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,4 +173,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.facebook.react:react-native:+"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
