--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expo": "^52.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-status-bar": "~2.0.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
@@ -35,7 +36,6 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
-    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "babel-plugin-import": "^1.13.8"
+    "babel-plugin-import": "^1.13.8",
+    "@react-native-community/cli": "^12.0.0"
   },
   "private": true,
   "proxy": "http://192.168.43.107:8080"
