--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "expo": "^52.0.0",
     "expo-image-picker": "~16.0.3",
+    "expo-module-scripts": "^4.0.2",
     "expo-status-bar": "~2.0.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
@@ -45,8 +46,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "babel-plugin-import": "^1.13.8",
-    "@react-native-community/cli": "^12.0.0"
+    "@react-native-community/cli": "^12.0.0",
+    "babel-plugin-import": "^1.13.8"
   },
   "private": true,
   "proxy": "http://192.168.43.107:8080"
